# BAF_dev

./: README.md
benchmark/: CMakeLists.txt  ffttools.cpp  ffttools.hpp  fps.tmp  imglst.lst  imglst2.lst  matlabImgLst.py  run_BACFcpp.m  tracker-benchmark  tracker_benchmark.cpp  tracking_results.tmp
demo/: demo_img_list.cpp  demo_img_vot.cpp  demo_video.cpp  demo_vot.cpp
imglstlst/: imglst.lst  imglst1.lst  imglstcarScale.lst
ot/: imglst.lst
ot/src/: SSE2NEON.h  ffttools.cpp  ffttools.hpp  sse.hpp  stapletracker.cpp  stapletracker.hpp  stapletracker1.cpp  version.cpp
sak/: CMakeLists.txt  README.md
sak/common/: comdef.h
sak/imgProc/: CMakeLists.txt
sak/imgProc/inc/: cimage.hpp  fea_icf.hpp  histgram.hpp  image.h  img_convert.h  img_resize.h
sak/imgProc/src/: cimage.cpp  fea_icf.cpp  image.cpp  img_convert.cpp  img_resize.cpp  integral.cpp
sak/jsmn/: CMakeLists.txt
sak/sakCore/: CMakeLists.txt
sak/sakCore/inc/: rect_core.hpp
sak/sakCore/src/: rect_core.cpp
sak/utils/: CMakeLists.txt
sak/utils/inc/: ard_reader.hpp
sak/utils/src/: ard_reader.cpp  log.cpp
